--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev app/main.ts",
+    "dev": "ts-node-dev api",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
